# e3crys

./: .dockerignore  .gitignore  Dockerfile.ci  INSTALL.md  README.md  main.py  pyproject.toml
.github/workflows/: ci-image.yml  ci.yml
tests/: test_current_model_smoke.py  test_equivariance.py
